# swe-crew

./: README.md  agents.py  app.py  pyproject.toml  requirements.txt  tasks.py
db/: chroma.sqlite3
project/: about.html  backend_components_check.txt  checklist.txt  contact.html  index.html  menu.html  scripts.js  styles.css
project/backend/: api_documentation.md  app.py
project/backend/routes/: form.py  inventory.py
src/dev/: crew.py  main.py
src/dev/config/: agents.yaml
src/dev/tools/: custom_tool.py
tools/: file_tool.py
