[tool.poetry]
name = "dev"
version = "0.1.0"
description = "dev using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
dev = "dev.main:run"
train = "dev.main:train"
replay = "dev.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
